chore(cleanup): add missing clean-up scripts to tooling/jest-presets

--- a/tooling/jest-presets/package.json
+++ b/tooling/jest-presets/package.json
@@ -5,6 +5,13 @@
   "publishConfig": {
     "access": "public"
   },
+  "scripts": {
+    "clean": "rimraf dist",
+    "clean:full": "rimraf dist .turbo node_modules"
+  },
+  "dependencies": {
+    "rimraf": "^6.0.1"
+  },
   "devDependencies": {
     "@swc/core": "^1.7.28",
     "@swc/jest": "^0.2.36",
