--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "build": "turbo build",
     "checks": "turbo lint:fix && pnpm run format:fix && turbo typecheck",
+    "ci:publish": "pnpm publish -r",
+    "ci:version": "pnpm changeset version",
     "clean": "turbo clean",
     "clean:full": "turbo clean:full && rimraf .turbo node_modules",
     "commit": "cz",
@@ -24,6 +26,7 @@
     "pnpm": ">=9.1.4"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.8",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@repo/typescript-config": "workspace:*",
